# blockchaincore

./: .gitignore  CMakeLists.txt  README.md  api_key  asio.hpp  blockRunner.py  blockchain.json  blockchain_bridge.py  blockchain_core.hpp  blockchain_databases.py  blockchain_p2p_integration.hpp  blockchain_p2p_intergration.hpp  build.sh  build_arch.sh  dashboardintergration.md  database_functions_combined.py  database_manager.py  deletesoon  django setup  docker  fixes.md  htttplibdownl.sh  p2p_blockchain_network.hpp  p2p_crypto_utils.hpp  p2p_message.hpp  p2p_network_manager_enhanced.hpp  p2p_node_manager.hpp  p2p_peer.hpp  p2p_python_bindings.cpp  p2p_torrent.cpp  p2p_types.hpp  p2pplan.md  polymorphicblock.py  prompt  prompt.md  promptforintergration.txt  python_bindings.cpp  pyvenv.cfg  requirements.txt  sample_data.json  (+15 more)
blockchain_dashboard/: blockchain.json  db.sqlite3  file_upload_system.py  startup_config.json  startup_manager.py  system_config.json
blockchain_dashboard copy/: system_config.json
blockchain_dashboard copy/core/: context_processor.py  tests.py  utils.py  views.py
blockchain_dashboard copy/core/templates/core/: login.html
blockchain_dashboard copy/databases/: views.py
blockchain_dashboard copy/management/commands/: setup_blockchain.py
blockchain_dashboard copy/templates/: base.html  dashboard.html
blockchain_dashboard copy/templates/auth/: login.html
blockchain_dashboard copy/templates/files/: upload.html
blockchain_dashboard/blockchain_dashboard/: settings.py  urls.py
blockchain_dashboard/blockchain_databases/: db_chain.json
blockchain_dashboard/blockchain_databases/databases/dashboard_test_db/: metadata.json  schema.json  users.json
blockchain_dashboard/core/: consumers.py  forms.py  message_queue.py  middleware.py  models.py  urls.py  views.py
blockchain_dashboard/core/migrations/: 0001_initial.py
blockchain_dashboard/core/templates/core/: dashboard.html
blockchain_dashboard/files/: upload_handler.py
blockchain_dashboard/metrics/: session_metrics.json
blockchain_dashboard/mining/: dashboard.html
blockchain_dashboard/security/: monitoring.py
blockchain_dashboard/static/js/: dashboard-websocket.js
blockchain_databases/: db_chain.json
blockchain_databases/databases/trial2/: metadata.json  schema.json  users.json
blockchain_databases/databases/trial_db/: metadata.json  schema.json  users.json
blockchain_databases/databases/trial_db/files/: 1748453529_1748453529_54477955_index.html  1748453529_1748453529_54477955_index.html.meta.json  1748593391_1748593391_3346a3c2_treeStructure.mdx  1748593391_1748593391_3346a3c2_treeStructure.mdx.meta.json  1748593391_1748593391_9a18e85b_READme.md.meta.json  1748593391_1748593391_c9727894_package.json  1748593391_1748593391_c9727894_package.json.meta.json  1748593391_1748593391_df6d03e6_package-lock.json  1748593391_1748593391_df6d03e6_package-lock.json.meta.json
config/: node.conf  test.conf
docs/: API.md  README.md
include/: MultiChainManager.h  version.h  version.h.in
include/api/: RestApiServer.h
include/blockchain/: Block.h  Blockchain.h  FileBlockchain.h  Transaction.h  TransactionPool.h
include/cli/: CLIInterface.h
include/multichain/: MultiChainManager.h
include/p2p/: P2PNetwork.h
include/security/: SecurityManager.h
include/utils/: Crypto.h  Utils.h
include/web/: WebInterface.h
metrics/: session_metrics.json
monitoring/: grafana-dashboard.json  prometheus-exporter.py
python_blockchain_data/: cpp_sync.json
scripts/: arch-performance-tuning.sh  setup-systemd.sh
secure_uploads/: upload_chain.json
secure_uploads/approved/: 1748593391_9a18e85b_READme.md
secure_uploads/quarantine/: 1748593391_fb3208b2_vite.config.js
secure_users/admin/: profile.json
security_reports/: security_audit_1748524921.json  security_audit_1748524969.json
security_storage/: fallback_security.json  security_chain.json
src/: MultiChainManager.cpp  cli_main.cpp  main.cpp  main.cpp.backup
src/api/: RestApiServer.cpp
src/blockchain/: Block.cpp  Blockchain.cpp  FileBlockchain.cpp  Transaction.cpp  TransactionPool.cpp
src/cli/: CLIInterface.cpp
src/multichain/: ChainBridge.cpp  ChainFactory.cpp  ConsensusCoordinator.cpp  MultiChainManager.cpp
src/p2p/: MessageHandler.cpp  P2PNetwork.cpp  p2pnetworklongcode.txt
src/security/: SecurityManager.cpp
src/utils/: Crypto.cpp  Utils.cpp
src/web/: WebInterface.cpp
src/web/static/: index.html
systemd/: blockchain-node-user.service  blockchain-node.service  blockchain-node@.service
tests/: run_tests.sh  test_basic.py
web/static/: index.html
